@@ -1,5 +1,6 @@
 package guru.springframework.controller;
 
+import guru.springframework.commands.RecipeCommand;
 import guru.springframework.model.Recipe;
 import guru.springframework.service.RecipeService;
 import guru.springframework.util.Mappings;
@@ -7,7 +8,9 @@ import guru.springframework.util.ViewNames;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 
 @Controller
@@ -23,10 +26,25 @@ public class RecipeController {
     @RequestMapping(Mappings.SHOW_RECIPE+"/{id}")
     public String showRecipeById(@PathVariable String id, Model model){
 
-        Recipe recipe = recipeService.findById(new Long(id));
+        Recipe recipe = recipeService.findById(Long.valueOf(id));
         model.addAttribute("recipe", recipe);
 
         return ViewNames.SHOW_RECIPE;
+    }
+
+    @RequestMapping(Mappings.NEW_RECIPE)
+    public String newRecipe(Model model){
+
+        model.addAttribute("recipe", new RecipeCommand());
+
+        return ViewNames.NEW_RECIPE;
+    }
+
+    @PostMapping
+    @RequestMapping("recipe")
+    public String saveOrUpdate(@ModelAttribute RecipeCommand command){
+        RecipeCommand savedCommand = recipeService.saveRecipeCommand(command);
+        return "redirect:/" + Mappings.SHOW_RECIPE +"/"+ savedCommand.getId();
     }
 
 }
